# Prism

./: .mcp.json  README.md  iris_config.yaml  main.py
core/: harness.py
iris/: iris.db  iris_config.yaml  main.py  meta_trace_full.json  meta_trace_report.md  pyproject.toml
iris/backend/: api.py  sessions.py  sse_bridge.py  user_input_tool.py
iris/core/: budget.py  config.py  context.py  evaluator.py  harness.py  run_directory.py  schemas.py  skill_loader.py
iris/memory/: experience_library.json
iris/memory/calibration/: prediction_log.jsonl
iris/memory/companies/: 0700.HK.md  AAPL.md  AMD.md  GOOG.md  MSFT.md  NVDA.md  TSLA.md
iris/skills/dcf/: SKILL.md  config.yaml  excel_export.py  tools.py
iris/skills/experience/: SKILL.md  config.yaml  tools.py
iris/skills/hypothesis/: SKILL.md  config.yaml  tools.py
iris/skills/reflection/: SKILL.md
iris/skills/trading/: SKILL.md  config.yaml  tools.py
iris/soul/: analysis_process.md  evaluator.md  reflection.md  role.md  self_check.md  steering.md  v0.1.md
iris/tests/: test_api.py  test_context.py  test_dcf_expanded.py  test_dcf_skill.py  test_document_parser.py  test_e2e_context.py  test_excel_export.py  test_excel_parser.py  test_harness.py  test_integration.py  test_knowledge.py  test_memory.py  test_session_accumulator.py  test_skill_loader.py  test_unified_memory.py  test_url_ingest.py
iris/tools/: document_parser.py  financials.py  market.py  memory.py  retrieval.py  search.py  sec_filing.py  semantic_search.py  unified_memory.py  url_ingest.py
iris/trace_reports/: META_2026-03-31_deep_research.md
(+59 files in other folders)
